@@ -32,11 +32,8 @@
 	disable_error=1 G_CHECK_VALIDINT $1 && INPUT=$1
 
 	#/////////////////////////////////////////////////////////////////////////////////////
-	#GIT Branch | master / testing
+	#GIT Owner
 	#/////////////////////////////////////////////////////////////////////////////////////
-	GITBRANCH="$(grep -m1 '^[[:blank:]]*DEV_GITBRANCH=' /DietPi/dietpi.txt | sed 's/^[^=]*=//')"
-	[[ ! $GITBRANCH ]] && GITBRANCH='master'
-
 	GITFORKOWNER="$(grep -m1 '^[[:blank:]]*DEV_GITOWNER=' /DietPi/dietpi.txt | sed 's/^[^=]*=//')"
 	[[ ! $GITFORKOWNER ]] && GITFORKOWNER='Fourdee'
 
@@ -56,26 +53,27 @@
 
 	COREVERSION_SERVER=0
 	SUBVERSION_SERVER=0
+	RCVERSION_SERVER=0
 
 	URL_MIRROR_INDEX=0
 	URL_MIRROR_SERVERVERSION=(
 
-		"https://raw.githubusercontent.com/$GITFORKOWNER/DietPi/$GITBRANCH/dietpi/server_version-6"
-		"https://dietpi.com/downloads/dietpi-update_mirror/$GITBRANCH/server_version-6"
+		"https://raw.githubusercontent.com/$GITFORKOWNER/DietPi/$G_GITBRANCH/dietpi/server_version-6"
+		"https://dietpi.com/downloads/dietpi-update_mirror/$G_GITBRANCH/server_version-6"
 
 	)
 
 	URL_MIRROR_ZIP=(
 
-		"https://github.com/$GITFORKOWNER/DietPi/archive/$GITBRANCH.zip"
-		"https://dietpi.com/downloads/dietpi-update_mirror/$GITBRANCH/DietPi-$GITBRANCH.zip"
+		"https://github.com/$GITFORKOWNER/DietPi/archive/$G_GITBRANCH.zip"
+		"https://dietpi.com/downloads/dietpi-update_mirror/$G_GITBRANCH/DietPi-$G_GITBRANCH.zip"
 
 	)
 
 	URL_MIRROR_CHANGELOG=(
 
-		"https://raw.githubusercontent.com/$GITFORKOWNER/DietPi/$GITBRANCH/CHANGELOG.txt"
-		"https://dietpi.com/downloads/dietpi-update_mirror/$GITBRANCH/CHANGELOG.txt"
+		"https://raw.githubusercontent.com/$GITFORKOWNER/DietPi/$G_GITBRANCH/CHANGELOG.txt"
+		"https://dietpi.com/downloads/dietpi-update_mirror/$G_GITBRANCH/CHANGELOG.txt"
 
 	)
 
@@ -94,6 +92,12 @@
 				#Get server Version info
 				COREVERSION_SERVER=$(sed -n 1p server_version)
 				SUBVERSION_SERVER=$(sed -n 2p server_version)
+				#Master branch is always X.X.0. RC versions limited to beta/dev branches
+				if [[ $G_DEV_G_GITBRANCH != 'master' ]]; then
+
+					RCVERSION_SERVER=$(sed -n 3p server_version)
+
+				fi
 
 				#Check if server_version is a valid interger.
 				if disable_error=1 G_CHECK_VALIDINT $SUBVERSION_SERVER; then
@@ -133,16 +137,16 @@
 				echo '-1' > /DietPi/dietpi/.update_available
 
 			#Update available
-			elif (( $G_DIETPI_VERSION_SUB < $SUBVERSION_SERVER )); then
+			elif (( $G_DIETPI_VERSION_SUB < $SUBVERSION_SERVER )) || (( $G_DIETPI_VERSION_RC < $RCVERSION_SERVER )); then
 
 				UPDATE_AVAILABLE=1
 				echo ''
 				G_DIETPI-NOTIFY 0 'Update available'
-				G_DIETPI-NOTIFY 2 "Current Version : v$G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB"
-				G_DIETPI-NOTIFY 2 "Server Version  : v$COREVERSION_SERVER.$SUBVERSION_SERVER"
+				G_DIETPI-NOTIFY 2 "Current Version : v$G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB.$G_DIETPI_VERSION_RC"
+				G_DIETPI-NOTIFY 2 "Server Version  : v$COREVERSION_SERVER.$SUBVERSION_SERVER.$RCVERSION_SERVER"
 
 				#Write update available version to file.
-				echo "$COREVERSION_SERVER.$SUBVERSION_SERVER" > /DietPi/dietpi/.update_available
+				echo "$COREVERSION_SERVER.$SUBVERSION_SERVER.$RCVERSION_SERVER" > /DietPi/dietpi/.update_available
 
 			fi
 
@@ -274,15 +278,15 @@ Do you wish to continue and update DietPi to v$COREVERSION_SERVER.$SUBVERSION_SE
 			rm update.zip &> /dev/null
 
 			#Remove setting files from git that are not to be updated on client
-			rm DietPi-"$GITBRANCH"/dietpi/.* &> /dev/null
+			rm DietPi-"$G_GITBRANCH"/dietpi/.* &> /dev/null
 
 			#Remove folders of "non-critical scripts" before updating them. (eg: so we dont need to patch for /conf/* file removals)
 			# rm -R /DietPi/dietpi/conf #:https://github.com/Fourdee/DietPi/issues/905#issuecomment-298241622
 			# rm -R /DietPi/dietpi/func
 			# rm -R /DietPi/dietpi/misc
 
-			l_message='Copy DietPi core files to ramdisk' G_RUN_CMD cp -Rf DietPi-"$GITBRANCH"/dietpi /DietPi/
-			l_message='Copy rootfs files in place' G_RUN_CMD cp -Rf DietPi-"$GITBRANCH"/rootfs/. /
+			l_message='Copy DietPi core files to ramdisk' G_RUN_CMD cp -Rf DietPi-"$G_GITBRANCH"/dietpi /DietPi/
+			l_message='Copy rootfs files in place' G_RUN_CMD cp -Rf DietPi-"$G_GITBRANCH"/rootfs/. /
 
 			l_message='Set execute permissions for DietPi scripts' G_RUN_CMD chmod -R +x /DietPi /etc/cron.*/dietpi /var/lib/dietpi/services
 			systemctl daemon-reload
@@ -290,24 +294,32 @@ Do you wish to continue and update DietPi to v$COREVERSION_SERVER.$SUBVERSION_SE
 			#Verify/update dietpi.txt entries:
 			/DietPi/dietpi/func/dietpi-set_software verify_dietpi.txt
 
-			#Run Patch file
+			G_DIETPI-NOTIFY 3 "$G_PROGRAM_NAME" 'DietPi-Update Updating DietPi'
+			G_DIETPI-NOTIFY 2 "Current Version : v$G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB.$G_DIETPI_VERSION_RC"
+			G_DIETPI-NOTIFY 2 "Server Version  : v$COREVERSION_SERVER.$SUBVERSION_SERVER.$RCVERSION_SERVER\n"
+
+			# - Subversion update, run patch
 			while (( $G_DIETPI_VERSION_SUB < $SUBVERSION_SERVER )); do
 
-				G_DIETPI-NOTIFY 3 "$G_PROGRAM_NAME" 'DietPi-Update Updating DietPi'
-				G_DIETPI-NOTIFY 2 "Current Version : v$G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB"
-				G_DIETPI-NOTIFY 2 "Server Version  : v$COREVERSION_SERVER.$SUBVERSION_SERVER\n"
-
-				#Run patch file
 				G_DIETPI-NOTIFY 2 "Patching $G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB to $G_DIETPI_VERSION_CORE.$(( $G_DIETPI_VERSION_SUB + 1 ))"
 				/DietPi/dietpi/patch_file $G_DIETPI_VERSION_SUB
-
-				#Update Local Version ID
-				export G_DIETPI_VERSION_SUB=$((G_DIETPI_VERSION_SUB+1))
-				echo -e "$G_DIETPI_VERSION_CORE\n$G_DIETPI_VERSION_SUB" > /DietPi/dietpi/.version
-
-				G_DIETPI-NOTIFY 0 "Patch v$G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB completed\n"
+				export G_DIETPI_VERSION_SUB=$(( $G_DIETPI_VERSION_SUB + 1 ))
+				export G_DIETPI_VERSION_RC=$RCVERSION_SERVER #Cancel any RC updates, as subversions override it
 
 			done
+
+			# - RC update, rerun current subversion as patch.
+			while (( $G_DIETPI_VERSION_RC < $RCVERSION_SERVER )); do
+
+				G_DIETPI-NOTIFY 2 "Patching $G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB.RC:$G_DIETPI_VERSION_RC to $G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB.RC:$RCVERSION_SERVER"
+				/DietPi/dietpi/patch_file $(( $G_DIETPI_VERSION_SUB - 1 )) #rerun current subversion patch for RC's
+				export G_DIETPI_VERSION_RC=$RCVERSION_SERVER
+
+			done
+
+			#Update Local Version ID
+			echo -e "$G_DIETPI_VERSION_CORE\n$G_DIETPI_VERSION_SUB\n$G_DIETPI_VERSION_RC" > /DietPi/dietpi/.version
+			G_DIETPI-NOTIFY 0 "Patch v$G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB.$G_DIETPI_VERSION_RC completed\n"
 
 			#Remove Patch files.
 			rm /DietPi/dietpi/patch_file &> /dev/null
