@@ -33,7 +33,7 @@
 	#/////////////////////////////////////////////////////////////////////////////////////
 	#Globals
 	#/////////////////////////////////////////////////////////////////////////////////////
-	DIETPI_VERSION="$G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB"
+	DIETPI_VERSION="$G_DIETPI_VERSION_CORE.$G_DIETPI_VERSION_SUB.$G_DIETPI_VERSION_RC"
 	IMAGE_ADDITIONAL_CREDITS=$(sed -n 8p /DietPi/dietpi/.hw_model)
 
 	IP_ADDRESS=$(sed -n 4p /DietPi/dietpi/.network)
@@ -55,7 +55,7 @@
 		if [[ -f '/DietPi/dietpi/.update_available' ]]; then
 
 			UPDATE_AVAILABLE=1
-			UPDATE_AVAILABLE_VERSION=$(cat /DietPi/dietpi/.update_available)
+			UPDATE_AVAILABLE_VERSION=$(</DietPi/dietpi/.update_available)
 
 		fi
 
