@@ -73,13 +73,23 @@
 
 	fi
 
-	#DietPi versions
+	#DietPi GitBranch
+	G_GITBRANCH=${G_GITBRANCH:-master}
+	if [[ -r '/DietPi/dietpi.txt' ]]; then
+
+		G_GITBRANCH=$(grep -m1 '^DEV_GITBRANCH=' /DietPi/dietpi.txt | sed 's/^[^=]*=//')
+
+	fi
+
+	#DietPi Versions
 	G_DIETPI_VERSION_CORE=0
 	G_DIETPI_VERSION_SUB=0
+	G_DIETPI_VERSION_RC=0
 	if [[ -r '/DietPi/dietpi/.version' ]]; then
 
 		G_DIETPI_VERSION_CORE=$(sed -n 1p /DietPi/dietpi/.version)
 		G_DIETPI_VERSION_SUB=$(sed -n 2p /DietPi/dietpi/.version)
+		G_DIETPI_VERSION_RC=$(sed -n 3p /DietPi/dietpi/.version)
 
 	fi
 
@@ -2297,7 +2307,7 @@ $print_logfile_info
 
 		export G_USER_INPUTS=0
 		/DietPi/dietpi/dietpi-backup -1
-		G_CONFIG_INJECT 'DEV_GITBRANCH=' 'DEV_GITBRANCH=testing' /DietPi/dietpi.txt
+		G_CONFIG_INJECT 'DEV_GITBRANCH=' 'DEV_GITBRANCH=dev' /DietPi/dietpi.txt
 		/DietPi/dietpi/dietpi-update -1
 		/DietPi/dietpi/dietpi-backup 1
 
