@@ -60,13 +60,13 @@
 
 		#Pre-6.9 preparations: Manually copy rootfs files in place: https://github.com/Fourdee/DietPi/pull/1802
 		#	NB: dietpi-update takes over, post v6.9 update completion.
-		GITBRANCH="$(grep -m1 '^[[:blank:]]*DEV_GITBRANCH=' /DietPi/dietpi.txt | sed 's/^[^=]*=//')"
-		if (( $G_DIETPI_VERSION_SUB < 9 )) && [[ -d /tmp/dietpi-update/DietPi-$GITBRANCH/rootfs ]]; then
+		G_GITBRANCH="$(grep -m1 '^[[:blank:]]*DEV_G_GITBRANCH=' /DietPi/dietpi.txt | sed 's/^[^=]*=//')"
+		if (( $G_DIETPI_VERSION_SUB < 9 )) && [[ -d /tmp/dietpi-update/DietPi-$G_GITBRANCH/rootfs ]]; then
 
-			l_message='Copy rootfs files in place' G_RUN_CMD cp -Rf /tmp/dietpi-update/DietPi-"$GITBRANCH"/rootfs/. /
+			l_message='Copy rootfs files in place' G_RUN_CMD cp -Rf /tmp/dietpi-update/DietPi-"$G_GITBRANCH"/rootfs/. /
 			l_message='Set execute permissions for DietPi scripts' G_RUN_CMD chmod -R +x /etc/cron.*/dietpi /var/lib/dietpi/services
 			systemctl daemon-reload
-			l_message='Clean download location' G_RUN_CMD rm -R /tmp/dietpi-update/DietPi-"$GITBRANCH"/rootfs
+			l_message='Clean download location' G_RUN_CMD rm -R /tmp/dietpi-update/DietPi-"$G_GITBRANCH"/rootfs
 
 		fi
 
@@ -1281,6 +1281,24 @@ You should not face any difference by following this advice, no IPv6 addresses w
 			#Now part of rootfs: https://github.com/Fourdee/DietPi/issues/2103
 			chmod +x /var/lib/dietpi/services/dietpi-wifi-monitor.sh
 			systemctl daemon-reload
+			#-------------------------------------------------------------------------------
+			#Switch from testing to dev branch
+			export G_DEV_G_GITBRANCH=$(grep -m1 '^DEV_G_GITBRANCH=' /DietPi/dietpi.txt | sed 's/^[^=]*=//')
+			if grep -q '^DEV_G_GITBRANCH=testing' /DietPi/dietpi.txt; then
+
+				export G_DEV_G_GITBRANCH='dev'
+				G_CONFIG_INJECT 'DEV_G_GITBRANCH=' 'DEV_G_GITBRANCH=dev' /DietPi/dietpi.txt
+				cat << _EOF_ > /DietPi/dietpi/.version
+6
+17
+0
+_EOF_
+
+				G_DIETPI-NOTIFY 0 "Switched from 'testing' to 'dev' branch. Please rerun, 'dietpi-update'"
+				killall -w dietpi-update
+				exit
+
+			fi
 			#-------------------------------------------------------------------------------
 
 		fi
