@@ -3,6 +3,8 @@ v6.17
 (xx/09/18)
 
 Changes / Improvements / Optimizations:
+ - General | GitBranch 'testing' has been changed to 'dev': https://github.com/Fourdee/DietPi/issues/2083#issuecomment-426842537
+ - General | DietPi now has 3 branches (master=stable, beta=public testing, dev=dev). By default, all users are on master/stable branch: https://github.com/Fourdee/DietPi/issues/2083#issuecomment-426842537
  - General | Improved detection of permissions support during user data transfers: https://github.com/Fourdee/DietPi/issues/2096
  - General | IPv6: Due to the requirements of various software titles available in dietpi-software (eg: nginx, redis-server), and that IPv6 is slowly becoming more common place, IPv6 is now disabled via sysctl on interface level, while it stays enabled on kernel level: https://github.com/Fourdee/DietPi/issues/2027
  - DietPi-Config | Added an option to toggle preferring IPv4 connections with APT and wget, if IPv6 is enabled. This enhances compatibility and performance in some cases.
